h1. Release Notes for Sirius

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.3.0). Changes in Sirius 7.3.0

h3. User-Visible Changes

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h2(#sirius7.2.1). Changes in Sirius 7.2.1

h3. User-Visible Changes

* <span class="label label-info">Modified</span> Sequence diagrams are now correctly identified in the Sirius Session Details report (accessible with the "Properties" dialog on an aird file).
* <span class="label label-info">Modified</span> When a semantic modification is made on a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as much as possible.
* <span class="label label-info">Modified</span> When an element is deleted after drag and drop, its attached notes and texts are also removed if preference "Remove/hide note when the annotated element is removed/hidden" is enabled.


h3. Specifier-Visible Changes

* <span class="label label-info">Modified</span> Three system properties have been added to allow the enablement of layout customizations for Regions (containers whose parent has a Children Presentation attribute set to Horizontal Stack or Vertical Stack): 
** @-Dorg.eclipse.sirius.diagram.ui.internal.region.autosize.figure.optimized=true@
*** When this system property is set to true, the auto-size layout of Regions is based on model constraints. It reduces the layout changes for such Regions after reopening of a diagram.
** @-Dorg.eclipse.sirius.diagram.ui.internal.region.autosize.action.optimized=true@ 